        New "importdivisions" message attribute, overriding "markdivisions"
    New group display mode (@showgroups) as BEAMINGS ---> this has become the default
	If you wanted to keep the old modes as default, change the attribute explicitly  

- bach.score:
    Default behavior of setcursor in presence of grace notes has changed: it only accounts for grace notes in the first measure.
	You can change this by using the new attribute @nudgeforgrace, given to many messages, including:
	"setcursor", "getpixelpos", "timetopixel", "timepoint", "interp", "overtype"
	The same messages also now allows for an @accurate mode (not breaking any compatibility).

- bach.pitchpack now treats negative degrees as descending steps (see the bell / bach.expr makepitch function)

- bach.transcribe: now the "allnotesoff" message only updates tails when the engine is on. 
			(As this one was a real bug, it should not break any existing patch, but out of caution check them anyway if you used it)



***********************
*** VERSION CHANGES ***
***********************

authorization: now the code for a given year can be entered until January of the next year

bach ecosystem: no extra memory is claimed by bach before the first bach object is created

multiple objects: help files and doc updated

- bell, bach.expr:
    makepitch function now treats negative degrees as descending steps (e.g. makepitch(-1, 0, 5) returns B4)
    fixed crash when dividing with // an integer by 0

- bell: fixed various memory leaks
    primeser: the second argument may be left unset
    reduce: fixed memory leaks and memory corruptions (potentially causing crashes)
    fixed parsing of pitch literals
    new built-in functions: mc2f, f2mc, minimum, maximum
    fixed argument names for the makepitch function: new argument names are "degree", "alter" and "octave"
    fixed argument names for all math functions
    dot operator can be preceded by whitespace