@@ -213,6 +213,7 @@ t_llllobj_common_symbols_table *llllobj_common_symbols_gettable()
     x->s_cursor = gensym("cursor");
     x->s_commands = gensym("commands");
     x->s_play = gensym("play");
+    x->s_playout = gensym("playout");
     x->s_stop = gensym("stop");
     x->s_pause = gensym("pause");
     x->s_clefs = gensym("clefs");
