@@ -48,6 +48,8 @@ v0.8.2b
         New "importdivisions" message attribute, overriding "markdivisions"
     New group display mode (@showgroups) as BEAMINGS ---> this has become the default
 	If you wanted to keep the old modes as default, change the attribute explicitly  
+    New "dump selection ..." message for bach.roll to only output parameters for selected content.
+    At the same time, the "dumpselection" message is deprecated in favor of either "dump selection playout" "plump"
 
 - bach.score:
     Default behavior of setcursor in presence of grace notes has changed: it only accounts for grace notes in the first measure.
